--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,9 +16,8 @@
         <ImageView
             android:layout_width="85dp"
             android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/app_logo" />
+            android:layout_centerInParent="true"
+            android:background="@drawable/common_google_signin_btn_icon_dark" />
 
     </RelativeLayout>
 
